# servant-docs-simple

./: .gitignore  .hlint.yaml  .travis.yml  CHANGELOG.md  LICENSE  Makefile  README.md  servant-docs-simple.cabal
.github/workflows/: haskell-ci.yml
examples/: custom.hs  example.hs  format.hs  generate.hs  parse.hs  render.hs
src/: ServantDocsSimple.hs
src/Servant/Docs/: Simple.hs
src/Servant/Docs/Simple/: Parse.hs  Render.hs
test/: Spec.hs
test/Test/Servant/Docs/: Simple.hs
test/Test/Servant/Docs/Simple/: Parse.hs  Render.hs  Samples.hs
