cabal-version:       2.4
name:                servant-docs-simple
version:             0.0.0.0
synopsis:            Generate documentation from API type
description:         Generate documentation from API type
homepage:            https://github.com/kwannoel/servant-docs-simple
bug-reports:         https://github.com/kwannoel/servant-docs-simple/issues
license:             MIT
license-file:        LICENSE
author:              kwannoel
maintainer:          kwannoel <noelkwan1998@gmail.com>
copyright:           2020 kwannoel
category:            Utility
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.4.4
                     GHC == 8.6.5
                     GHC == 8.8.2

source-repository head
  type:                git
  location:            https://github.com/kwannoel/servant-docs-simple.git

common common-options
  build-depends:       base >= 4.11.1.0 && < 4.14
  
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                       OverloadedStrings
                       AllowAmbiguousTypes
                       DataKinds
                       FlexibleInstances
                       OverloadedStrings
                       ScopedTypeVariables
                       TypeApplications
                       TypeFamilies
                       TypeOperators
                       PolyKinds

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     ServantDocsSimple

test-suite servant-docs-simple-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       servant-docs-simple
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
