cabal-version:       2.4
name:                servant-docs-simple
version:             0.1.0.0
synopsis:            Generate documentation from API type
description:         Generate documentation from API type
homepage:            https://github.com/Holmusk/servant-docs-simple
bug-reports:         https://github.com/Holmusk/servant-docs-simple/issues
license:             MIT
license-file:        LICENSE
author:              kwannoel
maintainer:          Holmusk <tech@holmusk.com>
copyright:           2020 Holmusk
category:            Utility
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.6.5
                     GHC == 8.8.2

source-repository head
  type:                git
  location:            https://github.com/kwannoel/servant-docs-simple.git

common common-options
  build-depends:       base >= 4.11.1.0 && < 4.14
                     , aeson
                     , aeson-pretty
                     , bytestring
                     , prettyprinter
                     , servant >= 0.16
                     , text

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010
  default-extensions:  AllowAmbiguousTypes
                       ConstraintKinds
                       DataKinds
                       DerivingStrategies
                       FlexibleInstances
                       FunctionalDependencies
                       OverloadedStrings
                       PolyKinds
                       ScopedTypeVariables
                       TypeApplications
                       TypeFamilies
                       TypeOperators

library
  import:              common-options
  hs-source-dirs:      src

  exposed-modules:     Servant.Docs.Simple
                       Servant.Docs.Simple.Parse
                       Servant.Docs.Simple.Render

test-suite servant-docs-simple-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs

  build-depends:       servant-docs-simple
                     , hspec
                     , hspec-core
                     , raw-strings-qq

  other-modules:       Test.Servant.Docs.Simple
                       Test.Servant.Docs.Simple.Render
                       Test.Servant.Docs.Simple.Parse
                       Test.Servant.Docs.Simple.Samples

  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
